correção de tag container

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>título da página</title>
   </head>
   <body>
-    <div>
+    <div class="container">
         <header>
             <h1>Titulo do meu conteúdo inicial</h1>
         </header>
